# LichessBot

./: Cargo.toml  README.md
src/: engine.rs  lichess_api.rs  main.rs
