[package]
name = "chess_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = "3.2.0"
reqwest = { version = "0.12.5", features = ["blocking", "json", "stream"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
rayon = "1.10.0"
arrow = "52.1.0"
tokio = { version = "1.38.0", features = ["full"] }
futures-util = "0.3.30"